# Me

./: CNAME  CV.docx  README.md  index.html  project-detail.html  project-websites.html
Portfolio/: index.html
Portfolio/assets/TowerDefence/: BossCritter.h  CMakeLists.txt  Cell.cpp  Critter.cpp  CritterGroupGenerator.h  FastCritter.cpp  FastCritter.h  FreezingDamageDecorator.cpp  FreezingDamageDecorator.h  Map.cpp  Map.h  Player.cpp  Player.h  README.txt  SniperTower.cpp  SplashDamageDecorator.h  StrongCritter.h  StrongestTargetingStrategy.h  Subject.h  Tower.cpp  TowerDecorator.cpp  TowerDecoratorUtility.h  TowerObserver.cpp  WeakCritter.cpp  WizardTower.cpp  WizardTower.h
Portfolio/assets/TowerDefence/UIComponents/: Button.h
Portfolio/assets/art-jam/: README.md  index.html  response.md
Portfolio/assets/art-jam/js/: script.js
Portfolio/assets/images/TowerDefence/: BomberTower.cpp  BomberTower.h  BossCritter.cpp  BurningDamageDecorator.cpp  BurningDamageDecorator.h  Cell.h  Critter.h  CritterFactory.cpp  CritterFactory.h  CritterGroupGenerator.cpp  CritterObserver.h  CritterStats.cpp  CritterStats.h  MapObserver.h  NearestTargetingStrategy.h  Observer.h  RandomTargetingStrategy.h  SniperTower.h  SplashDamageDecorator.cpp  StrongCritter.cpp  TargetingStrategy.cpp  TargetingStrategy.h  Tower.h  TowerDecorator.h  TowerDecoratorUtility.cpp  TowerObserver.h  TowerStats.cpp  TowerStats.h  WeakCritter.h  main.cpp
Portfolio/assets/mod-jam/: README.md  response.md
Portfolio/assets/mod-jam/js/: script.js
Portfolio/assets/mod-jam/process/: ideas.md
Portfolio/assets/variation-jam/: README.md
Portfolio/assets/variation-jam/js/: menu.js  script.js
Portfolio/css/: animations.css  style.css
Portfolio/js/: main.js
Websites/: index-nail-salon.html  index-pizza-restaurant.html
css/: animations.css  project-detail.css  project-websites.css
js/: main.js  project-detail.js
(+3 files in other folders)
